--- a/popup/index.html
+++ b/popup/index.html
@@ -2,19 +2,21 @@
   <head>
     <title>Ogame extension</title>
     <link rel="stylesheet" href="styles/vendors/bootstrap.css" charset="utf-8">
-    <link href="styles/vendors/bootstrap-toggle.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
 
   </head>
-  <body style="width: 400px; height: auto; background: #ecf0f1;">
+  <body style="width: 500px; height: auto; background: #ecf0f1;">
 
     <div id="app"></div>
 
-    <script type="text/javascript" src="/js/vendors/jquery-3.0.0.min.js"></script>
-    <script type="text/javascript" src="/js/vendors/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/js/vendors/bootstrap-toggle.min.js"></script>
-    <script type="text/javascript" src="/js/vendors/vue.js"></script>
-    <script type="text/javascript" src="/js/modules/storage.js"></script>
-    <script type="text/javascript" src="components/refresh-form.js"></script>
+    <script type="text/javascript" src="/assets/js/vendors/jquery.min.js"></script>
+    <script type="text/javascript" src="/assets/js/vendors/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/assets/js/vendors/vue.js"></script>
+    <script type="text/javascript" src="/assets/js/vendors/vue-router.min.js"></script>
+    <script type="text/javascript" src="/assets/js/modules/storage.js"></script>
+    <script type="text/javascript" src="components/coords-shortcut/button.js"></script>
+    <script type="text/javascript" src="components/coords-shortcut/form.js"></script>
+    <script type="text/javascript" src="components/refresh.js"></script>
     <script type="text/javascript" src="components/app.js"></script>
     <!-- <script type="text/javascript" src="default/popup-default.js"></script> -->
   </body>
