--- a/popup/index.html
+++ b/popup/index.html
@@ -16,7 +16,8 @@
     <script type="text/javascript" src="/assets/js/modules/storage.js"></script>
     <script type="text/javascript" src="components/coords-shortcut/button.js"></script>
     <script type="text/javascript" src="components/coords-shortcut/form.js"></script>
-    <script type="text/javascript" src="components/refresh.js"></script>
+    <script type="text/javascript" src="components/refresh/button.js"></script>
+    <script type="text/javascript" src="components/refresh/form.js"></script>
     <script type="text/javascript" src="components/app.js"></script>
     <!-- <script type="text/javascript" src="default/popup-default.js"></script> -->
   </body>
